--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "vigee-designsystem",
-  "version": "1.4.19",
+  "version": "1.4.28",
   "description": "Vigee - Design System",
-  "main": "./dist/index.ts",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "module": "./dist/index.mjs",
   "files": [
     "dist"
   ],
   "scripts": {
     "lint": "tsc",
-    "build": "tsup",
-    "test": "jest"
+    "build": "tsup"
   },
   "repository": {
     "type": "git",
@@ -23,6 +21,7 @@
   "author": "Romain Dagnan",
   "license": "ISC",
   "dependencies": {
+    "@radix-ui": "^1.0.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
@@ -32,6 +31,7 @@
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
+    "radix-ui": "^1.0.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "tsc-init": "^2.1.0",
@@ -41,13 +41,12 @@
     "@swc/core": "^1.3.100",
     "@types/jasmine": "^5.1.4",
     "@types/jest": "^29.5.11",
+    "autoprefixer": "^10.4.16",
     "jasmine-core": "^5.1.1",
     "karma": "^6.4.2",
     "karma-chrome-launcher": "^3.2.0",
     "karma-jasmine": "^5.1.0",
     "karma-webpack": "^5.0.0",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
     "tsup": "^8.0.1",
