--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "src/global.css",
+    "css": "global.css",
     "baseColor": "gray",
     "cssVariables": true
   },
