--- a/package.json
+++ b/package.json
@@ -2,11 +2,8 @@
   "name": "vigee-designsystem",
   "version": "1.4.28",
   "description": "Vigee - Design System",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "lint": "tsc",
     "build": "tsup"
@@ -21,9 +18,11 @@
   "author": "Romain Dagnan",
   "license": "ISC",
   "dependencies": {
-    "@radix-ui": "^1.0.1",
+    "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-table": "^8.10.7",
@@ -31,11 +30,12 @@
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
-    "radix-ui": "^1.0.1",
+    "react-hook-form": "^7.49.2",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "tsc-init": "^2.1.0",
-    "vigee-designsystem": "^1.4.17"
+    "vigee-designsystem": "^1.4.17",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@swc/core": "^1.3.100",
