--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Romain Dagnan",
   "license": "ISC",
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
