--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "tsc-init": "^2.1.0",
+    "use-debounce": "^10.0.0",
     "vigee-designsystem": "^1.4.17",
     "zod": "^3.22.4"
   },
