--- a/components.json
+++ b/components.json
@@ -10,7 +10,7 @@
     "cssVariables": true
   },
   "aliases": {
-    "components": "src/components",
-    "utils": "src/lib/utils"
+    "components": "@/app/components/design-system/src/components",
+    "utils": "@/app/components/design-system/src/lib/utils"
   }
 }
