--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "@tanstack/react-table": "^8.11.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
+    "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.49.2",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
