--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lucide-react": "^0.294.0",
     "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.49.2",
+    "recharts": "^2.10.3",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "tsc-init": "^2.1.0",
