--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
+    "moment": "^2.30.1",
     "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.49.2",
     "recharts": "^2.10.3",
