--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "moment": "^2.30.1",
     "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.49.2",
+    "react-resizable-panels": "^1.0.5",
     "recharts": "^2.10.3",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
