--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
     "moment": "^2.30.1",
+    "next-themes": "^0.2.1",
     "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.49.2",
     "react-resizable-panels": "^1.0.5",
     "recharts": "^2.10.3",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "tsc-init": "^2.1.0",
