--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.49.2",
     "react-resizable-panels": "^1.0.5",
+    "react-select": "^5.8.0",
     "recharts": "^2.10.3",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.1.0",
