--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@react-hook/media-query": "^1.1.1",
     "@tanstack/react-query": "^5.20.5",
     "@tanstack/react-table": "^8.11.2",
+    "animejs": "^3.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
