--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   },
   "devDependencies": {
     "@swc/core": "^1.3.100",
+    "@types/animejs": "^3.1.12",
     "@types/jasmine": "^5.1.4",
     "@types/jest": "^29.5.11",
     "autoprefixer": "^10.4.16",
