--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "next-themes": "^0.2.1",
     "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.49.2",
+    "react-phone-number-input": "^3.3.9",
     "react-resizable-panels": "^1.0.5",
     "react-select": "^5.8.0",
     "recharts": "^2.10.3",
