--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "embla-carousel-react": "^8.0.2",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
     "moment": "^2.30.1",
