--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
     "moment": "^2.30.1",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.51.3",
