--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "moment": "^2.30.1",
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
+    "nuqs": "^1.17.1",
     "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.51.3",
     "react-phone-number-input": "^3.3.9",
