--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "recharts": "^2.10.3",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.1.0",
+    "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
     "tsc-init": "^2.1.0",
     "use-debounce": "^10.0.0",
