--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "nuqs": "^1.17.1",
+    "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-phone-number-input": "^3.3.9",
     "react-resizable-panels": "^1.0.5",
