--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@types/animejs": "^3.1.12",
     "@types/jasmine": "^5.1.4",
     "@types/jest": "^29.5.11",
+    "@types/recharts": "^1.8.29",
     "autoprefixer": "^10.4.16",
     "jasmine-core": "^5.1.1",
     "karma": "^6.4.2",
