--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "declaration": true,
     "outDir": "./lib",
     "moduleResolution": "node",
-    "jsx": "react",
+ "jsx": "react-jsx",
     "skipLibCheck": true
   },
   "include": ["./**/*"],
