--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.4.28",
   "description": "Vigee - Design System",
   "scripts": {
-    "lint": "tsc",
-
+    "lint": "tsc"
   },
   "repository": {
     "type": "git",
