--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "@types/animejs": "^3.1.12",
     "@types/jasmine": "^5.1.4",
     "@types/jest": "^29.5.11",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.16",
     "jasmine-core": "^5.1.1",
     "karma": "^6.4.2",
