--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "declaration": true,
     "outDir": "./lib",
     "moduleResolution": "bundler",
-    "jsx": "preserve",
+ "jsx": "react-jsx",
     "skipLibCheck": true
   },
    "paths": {
