--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "lucide-react": "^0.294.0",
     "moment": "^2.30.1",
     "next": "^14.2.3",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.2.1",
     "nuqs": "^1.17.1",
     "react": "^18.3.1",
