--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.294.0",
     "moment": "^2.30.1",
+    "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.2.1",
     "nuqs": "^1.17.1",
     "react": "^18.3.1",
