--- a/package.json
+++ b/package.json
@@ -45,54 +45,30 @@
     "@react-hook/media-query": "^1.1.1",
     "@tanstack/react-query": "^5.20.5",
     "@tanstack/react-table": "^8.16.0",
-    "animejs": "^3.2.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "cmdk": "^0.2.0",
-    "date-fns": "^2.30.0",
-    "embla-carousel-react": "^8.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "eslint-config-next": "^14.2.3",
+    "zod": "^3.22.4",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.294.0",
-    "moment": "^2.30.1",
-    "next-auth": "^5.0.0-beta.19",
-    "next-themes": "^0.2.1",
-    "nuqs": "^1.17.1",
-    "react": "^18.3.1",
-    "react-day-picker": "^8.9.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.51.5",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.2.1",
+    "class-variance-authority": "^0.7.0",
+    "animejs": "^3.2.2",
+    "vaul": "^0.9.1",
     "react-phone-number-input": "^3.3.9",
+    "cmdk": "^0.2.0",
+    "nuqs": "^1.17.1",
+    "react-day-picker": "^8.9.1",
     "react-resizable-panels": "^1.0.5",
+    "date-fns": "^2.30.0",
+    "embla-carousel-react": "^8.0.2",
+    "tsc-init": "^2.1.0",
+    "moment": "^2.30.1",
     "react-select": "^5.8.0",
     "recharts": "^2.12.0",
-    "sonner": "^1.3.1",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "tsc-init": "^2.1.0",
     "use-debounce": "^10.0.0",
-    "vaul": "^0.9.1",
-    "zod": "^3.22.4"
+    "react-hook-form": "^7.51.5"
   },
-  "devDependencies": {
-    "@swc/core": "^1.3.100",
-    "@types/animejs": "^3.1.12",
-    "@types/jasmine": "^5.1.4",
-    "@types/jest": "^29.5.11",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.16",
-    "jasmine-core": "^5.1.1",
-    "karma": "^6.4.2",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-jasmine": "^5.1.0",
-    "karma-webpack": "^5.0.0",
-    "tailwindcss": "^3.4.3",
-    "ts-jest": "^29.1.1",
-    "ts-loader": "^9.5.1",
-    "tsup": "^8.0.1",
-    "typescript": "^5.3.3",
-    "webpack": "^5.89.0",
-    "webpack-dev-server": "^4.15.1"
-  }
+  "devDependencies": {}
 }
