--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.294.0",
     "moment": "^2.30.1",
+    "next-auth": "^5.0.0-beta.19",
     "nuqs": "^1.17.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.9.1",
@@ -64,10 +65,14 @@
     "react-resizable-panels": "^1.0.5",
     "react-select": "^5.8.0",
     "recharts": "^2.12.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.2.1",
     "tsc-init": "^2.1.0",
     "use-debounce": "^10.0.0",
     "vaul": "^0.9.1",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@types/animejs": "^3.1.12"
   }
 }
