--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lucide-react": "^0.294.0",
     "moment": "^2.30.1",
     "next-auth": "^5.0.0-beta.19",
+    "next-themes": "^0.3.0",
     "nuqs": "^1.17.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.9.1",
