--- a/package.json
+++ b/package.json
@@ -68,12 +68,14 @@
     "recharts": "^2.12.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "tsc-init": "^2.1.0",
     "use-debounce": "^10.0.0",
     "vaul": "^0.9.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/animejs": "^3.1.12"
+    "@types/animejs": "^3.1.12",
+    "@types/node": "^20.14.10"
   }
 }
