--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   },
   "devDependencies": {
     "@types/animejs": "^3.1.12",
+    "@types/lodash": "^4.17.10",
     "@types/node": "^20.14.10"
   }
 }
