FIX: tsconfig.json mis configuration of paths & missing config for .svg module leading to ts errors for files using .svg

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,16 +4,16 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "strict": true,
     "esModuleInterop": true,
-      "module": "esnext",
+    "module": "esnext",
     "declaration": true,
     "outDir": "components/lib",
     "moduleResolution": "bundler",
- "jsx": "react-jsx",
-    "skipLibCheck": true
-  },
-   "paths": {
+    "jsx": "react-jsx",
+    "skipLibCheck": true,
+    "paths": {
       "@/*": ["./*"]
     },
+  },
   "include": ["./**/*", ".", "components"],
   "exclude": ["node_modules", "components/lib"]
 }
