REMOVE: Removed paths aliases for design-system, forcing dev o use relative path to prevent build error when using the design system as a submodule, since using it as a submodule will ask tsconfig of the project to add the same path as the submodule to make it build correctly

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "baseUrl": ".",
     "lib": ["dom", "dom.iterable", "esnext"],
     "strict": true,
     "esModuleInterop": true,
@@ -10,9 +11,6 @@
     "moduleResolution": "bundler",
     "jsx": "react-jsx",
     "skipLibCheck": true,
-    "paths": {
-      "@/*": ["./*"]
-    },
   },
   "include": ["./**/*", ".", "components"],
   "exclude": ["node_modules", "components/lib"]
