--- a/package.json
+++ b/package.json
@@ -15,69 +15,69 @@
   "author": "Romain Dagnan",
   "license": "ISC",
   "dependencies": {
-    "@heroicons/react": "^2.1.1",
-    "@hookform/resolvers": "^3.3.2",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-context-menu": "^2.2.1",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-hover-card": "^1.0.7",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-navigation-menu": "^1.2.0",
-    "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-toggle": "^1.0.3",
-    "@radix-ui/react-toggle-group": "^1.0.4",
-    "@radix-ui/react-tooltip": "^1.0.7",
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-context-menu": "^2.2.4",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-hover-card": "^1.1.4",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.3",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-toggle-group": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@react-hook/media-query": "^1.1.1",
-    "@tanstack/react-query": "^5.20.5",
-    "@tanstack/react-table": "^8.16.0",
+    "@tanstack/react-query": "^5.62.16",
+    "@tanstack/react-table": "^8.20.6",
     "animejs": "^3.2.2",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^0.2.0",
+    "cmdk": "^0.2.1",
     "date-fns": "^2.30.0",
-    "embla-carousel-react": "^8.0.2",
-    "eslint-config-next": "^14.2.3",
-    "framer-motion": "^12.4.2",
+    "embla-carousel-react": "^8.5.2",
+    "eslint-config-next": "^14.2.23",
+    "framer-motion": "^12.4.4",
     "lucide-react": "^0.294.0",
     "moment": "^2.30.1",
-    "next-auth": "^5.0.0-beta.19",
+    "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.3.0",
-    "nuqs": "^1.17.1",
+    "nuqs": "^1.20.0",
     "react": "^19.0.0",
-    "react-day-picker": "^8.9.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-phone-number-input": "^3.3.9",
-    "react-resizable-panels": "^1.0.5",
-    "react-select": "^5.8.0",
-    "recharts": "^2.12.7",
-    "sonner": "^1.5.0",
-    "tailwind-merge": "^2.2.1",
+    "react-phone-number-input": "^3.4.10",
+    "react-resizable-panels": "^1.0.10",
+    "react-select": "^5.9.0",
+    "recharts": "^2.15.0",
+    "sonner": "^1.7.1",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tsc-init": "^2.1.0",
-    "use-debounce": "^10.0.0",
-    "vaul": "^0.9.1",
-    "zod": "^3.22.4"
+    "use-debounce": "^10.0.4",
+    "vaul": "^0.9.9",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/animejs": "^3.1.12",
-    "@types/lodash": "^4.17.10",
-    "@types/node": "^20.14.10"
+    "@types/lodash": "^4.17.14",
+    "@types/node": "^20.17.12"
   }
 }
