--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-email/components": "0.0.21",
     "@react-hook/media-query": "^1.1.1",
     "@tanstack/react-query": "^5.62.16",
     "@tanstack/react-table": "^8.20.6",
@@ -78,6 +79,7 @@
   "devDependencies": {
     "@types/animejs": "^3.1.12",
     "@types/lodash": "^4.17.14",
-    "@types/node": "^20.17.12"
+    "@types/node": "^20.17.12",
+    "react-email": "2.1.5"
   }
 }
