--- a/package.json
+++ b/package.json
@@ -60,10 +60,10 @@
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.3.0",
     "nuqs": "^1.20.0",
-    "react": "^19.0.0",
+    "react": "19.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.55",
     "react-phone-number-input": "^3.4.10",
     "react-resizable-panels": "^1.0.10",
     "react-select": "^5.9.0",
