--- a/package.json
+++ b/package.json
@@ -2,21 +2,12 @@
   "name": "vigee-designsystem",
   "version": "1.4.28",
   "description": "Vigee - Design System",
+  "license": "ISC",
   "scripts": {
     "lint": "tsc"
   },
-  "repository": {
-    "type": "git",
-    "url": "vigee-designsystem"
-  },
-  "keywords": [
-    "vigee-designsystem"
-  ],
-  "author": "Romain Dagnan",
-  "license": "ISC",
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -42,7 +33,6 @@
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.8",
     "@react-email/components": "0.5.3",
     "@react-hook/media-query": "^1.1.1",
     "@tanstack/react-query": "^5.62.16",
@@ -53,17 +43,12 @@
     "cmdk": "^0.2.1",
     "date-fns": "^2.30.0",
     "embla-carousel-react": "^8.5.2",
-    "eslint-config-next": "^14.2.23",
     "framer-motion": "^12.4.4",
     "lucide-react": "^0.294.0",
     "moment": "^2.30.1",
-    "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.3.0",
     "nuqs": "^1.20.0",
-    "react": "19.1.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.1.0",
-    "react-hook-form": "7.56.3",
     "react-phone-number-input": "^3.4.10",
     "react-resizable-panels": "^1.0.10",
     "react-select": "^5.9.0",
@@ -76,10 +61,21 @@
     "vaul": "^0.9.9",
     "zod": "^3.24.1"
   },
+  "peerDependencies": {
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "react-hook-form": "7.56.3",
+    "@hookform/resolvers": "3.10.0",
+    "next": "15.5.2",
+    "next-auth": "5.0.0-beta.25"
+  },
   "devDependencies": {
     "@types/animejs": "^3.1.12",
     "@types/lodash": "^4.17.14",
     "@types/node": "^20.17.12",
-    "react-email": "4.2.10"
+    "@types/react": "19.1.12",
+    "@types/react-dom": "19.1.9",
+    "react-email": "4.2.10",
+    "typescript": "5.9.2"
   }
 }
