--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "0.5.3",
     "@react-hook/media-query": "^1.1.1",
     "@tanstack/react-query": "^5.62.16",
