--- a/package.json
+++ b/package.json
@@ -51,18 +51,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
-    "date-fns": "^2.30.0",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
-    "eslint-config-next": "^14.2.23",
+    "eslint-config-next": "^16.0.1",
     "framer-motion": "^12.4.4",
     "lucide-react": "^0.294.0",
     "moment": "^2.30.1",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.3.0",
-    "nuqs": "^1.20.0",
-    "react": "19.1.0",
+    "nuqs": "^2.7.0",
+    "react": "19.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.55",
     "react-phone-number-input": "^3.4.10",
     "react-resizable-panels": "^1.0.10",
