--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
   "devDependencies": {
     "@types/animejs": "^3.1.12",
     "@types/lodash": "^4.17.14",
-    "@types/node": "^20.17.12",
-    "react-email": "2.1.5"
+    "@types/node": "^20.17.12"
+
   }
 }
