--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "moment": "^2.30.1",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.3.0",
-    "nuqs": "^2.7.2",
     "react": "19.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.2.0",
@@ -80,6 +79,7 @@
     "@hookform/resolvers": "3.10.0",
     "next": ">=15.5.2",
     "next-auth": ">=4.24.11 || >=5.0.0-beta.25",
+    "nuqs": ">=2.7.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-hook-form": "7.56.3"
