--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "license": "ISC",
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -53,18 +52,11 @@
     "cmdk": "^0.2.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
-    "eslint-config-next": "^16.0.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.294.0",
     "moment": "^2.30.1",
-    "next": "16.0.7",
-    "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.3.0",
-    "nuqs": "^2.8.2",
-    "react": "19.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.2.0",
-    "react-hook-form": "^7.55",
     "react-phone-number-input": "^3.4.10",
     "react-resizable-panels": "^1.0.10",
     "react-select": "^5.9.0",
@@ -78,13 +70,14 @@
     "zod": "^3.24.1"
   },
   "peerDependencies": {
-    "@hookform/resolvers": "3.10.0",
+    "@hookform/resolvers": ">=3.10.0",
+    "eslint-config-next": ">=15.0.0",
     "next": ">=15.5.2",
-    "next-auth": ">=4.24.11 || >=5.0.0-beta.25",
+    "next-auth": ">=4.24.11",
     "nuqs": ">=2.7.0",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
-    "react-hook-form": "7.56.3"
+    "react": ">=19.0.0",
+    "react-dom": ">=19.0.0",
+    "react-hook-form": ">=7.55.0"
   },
   "devDependencies": {
     "@types/animejs": "^3.1.12",
